@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH GRUB "8" "December 2001" "grub (GNU GRUB 0.90)" FSF
+.TH GRUB "8" "January 2002" "grub (GNU GRUB 0.90)" FSF
 .SH NAME
 grub \- the grub shell
 .SH SYNOPSIS
